// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lexer lexes <p { <b { hello } world 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "<",
    "toString": [Function],
    "type": "functionInvocationStart",
    "value": "<",
  },
  Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  Object {
    "col": 3,
    "line": 1,
    "lineBreaks": 0,
    "offset": 2,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 4,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": "{",
    "toString": [Function],
    "type": "openBracket",
    "value": "{",
  },
  Object {
    "col": 5,
    "line": 1,
    "lineBreaks": 0,
    "offset": 4,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 6,
    "line": 1,
    "lineBreaks": 0,
    "offset": 5,
    "text": "<",
    "toString": [Function],
    "type": "functionInvocationStart",
    "value": "<",
  },
  Object {
    "col": 7,
    "line": 1,
    "lineBreaks": 0,
    "offset": 6,
    "text": "b",
    "toString": [Function],
    "type": "identifier",
    "value": "b",
  },
  Object {
    "col": 8,
    "line": 1,
    "lineBreaks": 0,
    "offset": 7,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 9,
    "line": 1,
    "lineBreaks": 0,
    "offset": 8,
    "text": "{",
    "toString": [Function],
    "type": "openBracket",
    "value": "{",
  },
  Object {
    "col": 10,
    "line": 1,
    "lineBreaks": 0,
    "offset": 9,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 11,
    "line": 1,
    "lineBreaks": 0,
    "offset": 10,
    "text": "hello ",
    "toString": [Function],
    "type": "words",
    "value": "hello ",
  },
  Object {
    "col": 17,
    "line": 1,
    "lineBreaks": 0,
    "offset": 16,
    "text": "}",
    "toString": [Function],
    "type": "escapedCloseBracket",
    "value": "}",
  },
  Object {
    "col": 18,
    "line": 1,
    "lineBreaks": 0,
    "offset": 17,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 19,
    "line": 1,
    "lineBreaks": 0,
    "offset": 18,
    "text": "world",
    "toString": [Function],
    "type": "words",
    "value": "world",
  },
]
`;

exports[`lexer lexes <p {hello} 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "<",
    "toString": [Function],
    "type": "functionInvocationStart",
    "value": "<",
  },
  Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  Object {
    "col": 3,
    "line": 1,
    "lineBreaks": 0,
    "offset": 2,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 4,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": "{",
    "toString": [Function],
    "type": "openBracket",
    "value": "{",
  },
  Object {
    "col": 5,
    "line": 1,
    "lineBreaks": 0,
    "offset": 4,
    "text": "hello",
    "toString": [Function],
    "type": "words",
    "value": "hello",
  },
  Object {
    "col": 10,
    "line": 1,
    "lineBreaks": 0,
    "offset": 9,
    "text": "}",
    "toString": [Function],
    "type": "escapedCloseBracket",
    "value": "}",
  },
]
`;

exports[`lexer lexes <p{hello <b{world}} 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "<",
    "toString": [Function],
    "type": "functionInvocationStart",
    "value": "<",
  },
  Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  Object {
    "col": 3,
    "line": 1,
    "lineBreaks": 0,
    "offset": 2,
    "text": "{",
    "toString": [Function],
    "type": "openBracket",
    "value": "{",
  },
  Object {
    "col": 4,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": "hello ",
    "toString": [Function],
    "type": "words",
    "value": "hello ",
  },
  Object {
    "col": 10,
    "line": 1,
    "lineBreaks": 0,
    "offset": 9,
    "text": "<",
    "toString": [Function],
    "type": "functionInvocationStart",
    "value": "<",
  },
  Object {
    "col": 11,
    "line": 1,
    "lineBreaks": 0,
    "offset": 10,
    "text": "b",
    "toString": [Function],
    "type": "identifier",
    "value": "b",
  },
  Object {
    "col": 12,
    "line": 1,
    "lineBreaks": 0,
    "offset": 11,
    "text": "{",
    "toString": [Function],
    "type": "openBracket",
    "value": "{",
  },
  Object {
    "col": 13,
    "line": 1,
    "lineBreaks": 0,
    "offset": 12,
    "text": "world",
    "toString": [Function],
    "type": "words",
    "value": "world",
  },
  Object {
    "col": 18,
    "line": 1,
    "lineBreaks": 0,
    "offset": 17,
    "text": "}",
    "toString": [Function],
    "type": "escapedCloseBracket",
    "value": "}",
  },
  Object {
    "col": 19,
    "line": 1,
    "lineBreaks": 0,
    "offset": 18,
    "text": "}",
    "toString": [Function],
    "type": "escapedCloseBracket",
    "value": "}",
  },
]
`;

exports[`lexer lexes 1 \\< 2 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "<",
    "toString": [Function],
    "type": "functionInvocationStart",
    "value": "<",
  },
  Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  Object {
    "col": 3,
    "line": 1,
    "lineBreaks": 0,
    "offset": 2,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 4,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": "{",
    "toString": [Function],
    "type": "openBracket",
    "value": "{",
  },
  Object {
    "col": 5,
    "line": 1,
    "lineBreaks": 0,
    "offset": 4,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 6,
    "line": 1,
    "lineBreaks": 0,
    "offset": 5,
    "text": "1 ",
    "toString": [Function],
    "type": "words",
    "value": "1 ",
  },
  Object {
    "col": 8,
    "line": 1,
    "lineBreaks": 0,
    "offset": 7,
    "text": "\\\\<",
    "toString": [Function],
    "type": "escapedFunctionInvocation",
    "value": "\\\\<",
  },
  Object {
    "col": 10,
    "line": 1,
    "lineBreaks": 0,
    "offset": 9,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 11,
    "line": 1,
    "lineBreaks": 0,
    "offset": 10,
    "text": "2 ",
    "toString": [Function],
    "type": "words",
    "value": "2 ",
  },
  Object {
    "col": 13,
    "line": 1,
    "lineBreaks": 0,
    "offset": 12,
    "text": "}",
    "toString": [Function],
    "type": "escapedCloseBracket",
    "value": "}",
  },
]
`;

exports[`lexer lexes doubly nested escaped invocations 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "<",
    "toString": [Function],
    "type": "functionInvocationStart",
    "value": "<",
  },
  Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  Object {
    "col": 3,
    "line": 1,
    "lineBreaks": 0,
    "offset": 2,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 4,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": "{",
    "toString": [Function],
    "type": "openBracket",
    "value": "{",
  },
  Object {
    "col": 5,
    "line": 1,
    "lineBreaks": 1,
    "offset": 4,
    "text": "
",
    "toString": [Function],
    "type": "ws",
    "value": "
",
  },
  Object {
    "col": 1,
    "line": 2,
    "lineBreaks": 0,
    "offset": 5,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 2,
    "line": 2,
    "lineBreaks": 0,
    "offset": 6,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 3,
    "line": 2,
    "lineBreaks": 0,
    "offset": 7,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 4,
    "line": 2,
    "lineBreaks": 0,
    "offset": 8,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 5,
    "line": 2,
    "lineBreaks": 0,
    "offset": 9,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 6,
    "line": 2,
    "lineBreaks": 0,
    "offset": 10,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 7,
    "line": 2,
    "lineBreaks": 0,
    "offset": 11,
    "text": "<",
    "toString": [Function],
    "type": "functionInvocationStart",
    "value": "<",
  },
  Object {
    "col": 8,
    "line": 2,
    "lineBreaks": 0,
    "offset": 12,
    "text": "p",
    "toString": [Function],
    "type": "identifier",
    "value": "p",
  },
  Object {
    "col": 9,
    "line": 2,
    "lineBreaks": 0,
    "offset": 13,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 10,
    "line": 2,
    "lineBreaks": 0,
    "offset": 14,
    "text": "{",
    "toString": [Function],
    "type": "openBracket",
    "value": "{",
  },
  Object {
    "col": 11,
    "line": 2,
    "lineBreaks": 1,
    "offset": 15,
    "text": "
",
    "toString": [Function],
    "type": "ws",
    "value": "
",
  },
  Object {
    "col": 1,
    "line": 3,
    "lineBreaks": 0,
    "offset": 16,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 2,
    "line": 3,
    "lineBreaks": 0,
    "offset": 17,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 3,
    "line": 3,
    "lineBreaks": 0,
    "offset": 18,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 4,
    "line": 3,
    "lineBreaks": 0,
    "offset": 19,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 5,
    "line": 3,
    "lineBreaks": 0,
    "offset": 20,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 6,
    "line": 3,
    "lineBreaks": 0,
    "offset": 21,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 7,
    "line": 3,
    "lineBreaks": 0,
    "offset": 22,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 8,
    "line": 3,
    "lineBreaks": 0,
    "offset": 23,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 9,
    "line": 3,
    "lineBreaks": 0,
    "offset": 24,
    "text": "\\\\<",
    "toString": [Function],
    "type": "escapedFunctionInvocation",
    "value": "\\\\<",
  },
  Object {
    "col": 11,
    "line": 3,
    "lineBreaks": 2,
    "offset": 26,
    "text": "p {
          Hello, world!
        ",
    "toString": [Function],
    "type": "words",
    "value": "p {
          Hello, world!
        ",
  },
  Object {
    "col": 9,
    "line": 5,
    "lineBreaks": 0,
    "offset": 62,
    "text": "}",
    "toString": [Function],
    "type": "escapedCloseBracket",
    "value": "}",
  },
  Object {
    "col": 10,
    "line": 5,
    "lineBreaks": 1,
    "offset": 63,
    "text": "
",
    "toString": [Function],
    "type": "ws",
    "value": "
",
  },
  Object {
    "col": 1,
    "line": 6,
    "lineBreaks": 0,
    "offset": 64,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 2,
    "line": 6,
    "lineBreaks": 0,
    "offset": 65,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 3,
    "line": 6,
    "lineBreaks": 0,
    "offset": 66,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 4,
    "line": 6,
    "lineBreaks": 0,
    "offset": 67,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 5,
    "line": 6,
    "lineBreaks": 0,
    "offset": 68,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 6,
    "line": 6,
    "lineBreaks": 0,
    "offset": 69,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 7,
    "line": 6,
    "lineBreaks": 0,
    "offset": 70,
    "text": "}",
    "toString": [Function],
    "type": "escapedCloseBracket",
    "value": "}",
  },
  Object {
    "col": 8,
    "line": 6,
    "lineBreaks": 1,
    "offset": 71,
    "text": "
",
    "toString": [Function],
    "type": "ws",
    "value": "
",
  },
  Object {
    "col": 1,
    "line": 7,
    "lineBreaks": 0,
    "offset": 72,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 2,
    "line": 7,
    "lineBreaks": 0,
    "offset": 73,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 3,
    "line": 7,
    "lineBreaks": 0,
    "offset": 74,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 4,
    "line": 7,
    "lineBreaks": 0,
    "offset": 75,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 5,
    "line": 7,
    "lineBreaks": 0,
    "offset": 76,
    "text": "}",
    "toString": [Function],
    "type": "escapedCloseBracket",
    "value": "}",
  },
]
`;

exports[`lexer lexes multi argument invocations 1`] = `
Array [
  Object {
    "col": 1,
    "line": 1,
    "lineBreaks": 0,
    "offset": 0,
    "text": "<",
    "toString": [Function],
    "type": "functionInvocationStart",
    "value": "<",
  },
  Object {
    "col": 2,
    "line": 1,
    "lineBreaks": 0,
    "offset": 1,
    "text": "c",
    "toString": [Function],
    "type": "identifier",
    "value": "c",
  },
  Object {
    "col": 3,
    "line": 1,
    "lineBreaks": 0,
    "offset": 2,
    "text": "(",
    "toString": [Function],
    "type": "openParen",
    "value": "(",
  },
  Object {
    "col": 4,
    "line": 1,
    "lineBreaks": 0,
    "offset": 3,
    "text": "r",
    "toString": [Function],
    "type": "argument",
    "value": "r",
  },
  Object {
    "col": 5,
    "line": 1,
    "lineBreaks": 0,
    "offset": 4,
    "text": ",",
    "toString": [Function],
    "type": "argumentSeparator",
    "value": ",",
  },
  Object {
    "col": 6,
    "line": 1,
    "lineBreaks": 0,
    "offset": 5,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 7,
    "line": 1,
    "lineBreaks": 0,
    "offset": 6,
    "text": "exec",
    "toString": [Function],
    "type": "argument",
    "value": "exec",
  },
  Object {
    "col": 11,
    "line": 1,
    "lineBreaks": 0,
    "offset": 10,
    "text": ")",
    "toString": [Function],
    "type": "closeParen",
    "value": ")",
  },
  Object {
    "col": 12,
    "line": 1,
    "lineBreaks": 0,
    "offset": 11,
    "text": " ",
    "toString": [Function],
    "type": "ws",
    "value": " ",
  },
  Object {
    "col": 13,
    "line": 1,
    "lineBreaks": 0,
    "offset": 12,
    "text": "{",
    "toString": [Function],
    "type": "openBracket",
    "value": "{",
  },
  Object {
    "col": 14,
    "line": 1,
    "lineBreaks": 0,
    "offset": 13,
    "text": "}",
    "toString": [Function],
    "type": "escapedCloseBracket",
    "value": "}",
  },
]
`;
